# MissingModulesRepro

./: CMakeLists.txt  CMakePresets.json
ImportLayer/: CMakeLists.txt
ImportLeaves/: CMakeLists.txt
Layer/: CMakeLists.txt
LeafC/: module.modulemap
Projection/: CMakeLists.txt  ImportLayer.swift  ImportWindowsRuntime.swift
Projection/UWP/ABI/: CMakeLists.txt
Projection/UWP/Namespaces/: CMakeLists.txt
Projection/UWP/Namespaces/WindowsFoundation/: Aliases.swift  CMakeLists.txt
Projection/UWP/Namespaces/WindowsFoundationCollections/: Aliases.swift  CMakeLists.txt
Projection/UWP/Namespaces/WindowsStorageStreams/: Aliases.swift  CMakeLists.txt
Projection/UWP/Projection/: CMakeLists.txt
Projection/UWP/Projection/WindowsFoundation/: WindowsFoundation_AsyncStatus.swift  WindowsFoundation_IAsyncInfo.swift  WindowsFoundation_IAsyncOperation.swift  WindowsFoundation_IClosable.swift  WindowsFoundation_IMemoryBuffer.swift  WindowsFoundation_IMemoryBufferReference.swift  WindowsFoundation_MemoryBuffer.swift
Projection/UWP/Projection/WindowsFoundationCollections/: WindowsFoundationCollections_IIterable.swift  WindowsFoundationCollections_IIterator.swift  WindowsFoundationCollections_IVector.swift  WindowsFoundationCollections_IVectorView.swift
Projection/UWP/Projection/WindowsStorageStreams/: WindowsStorageStreams_Buffer.swift  WindowsStorageStreams_IBuffer.swift
Projection/WinRTComponent/: CMakeLists.txt
Projection/WinRTComponent/ABI/: CMakeLists.txt
Projection/WinRTComponent/ABI/include/: module.modulemap
Projection/WinRTComponent/Projection/: CMakeLists.txt
Support/: CMakeLists.txt
Support/ABIBindings/: CMakeLists.txt
Support/COM/: CMakeLists.txt  Imports.swift
Support/ImportLeaves/: CMakeLists.txt
Support/InternalABI/: CMakeLists.txt
Support/Layer/: CMakeLists.txt
Support/LeafC/: CMakeLists.txt
Support/LeafSwift/: CMakeLists.txt
Support/WindowsRuntime/: CMakeLists.txt  Imports.swift
(+144 files in other folders)
